# rsChessPgnEditor

./: Cargo.toml  README.md
rsChessPgnEditor/: Cargo.toml
rsChessPgnEditor/pgns/: chessok_com.pgn  dragon.pgn
rsChessPgnEditor/src/: main.rs
rsChessPgnEditor/src/program/: board_gui.rs  buttonsboard.rs  fensearch.rs  globs.rs  header.rs  internalxboard.rs  mainwin.rs  matchedgames.rs  mod.rs  nagcomments.rs  notationview.rs  pgn.rs  tags_textbuffer.rs  toolbargame.rs  treegames.rs  utils.rs  xboard.rs
rsChessPgnEditor/src/program/wchess/: Instrucciones.txt  board.rs  data.rs  displaymove.rs  gameline_h.rs  globs.rs  legalmoves.rs  mod.rs  movim.rs  perft.rs
src/program/: board_gui.rs  levels.rs  mod.rs  pgn.rs  pieces.rs  tags_textbuffer.rs  toolbarengine.rs  toolbargame.rs  treegames.rs  utils.rs
src/program/bookreader/: getbook.rs  keys.rs  mod.rs
src/program/wchess/: bitops.rs  board.rs  displaymove.rs  globs.rs  legalmoves.rs  mod.rs
