[package]
name = "rs_chess_pgn_editor"
version = "0.8.1"
authors = ["calvicius"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"
mut_static = "5.0.0"
cairo-rs = { version = "0.9.1", features = ["png", "pdf", "svg"] }
gdk = "0.13.2"
glib = "0.10.3"
pango = "0.9.1"
gdk-pixbuf = "0.9.0"
pangocairo = "0.10.0"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = "*"
features = ["v2_44"]
